testsuite/tests/module/mod130.stderr

mod130.hs:7:5: error:
    Variable not in scope: (<) :: t0 -> Int -> Int
    Perhaps you want to remove ‘<’ from the explicit hiding list
    in the import of ‘Prelude’ (mod130.hs:4:1-33).
